add libraries for tests